--- a/CSS/Grid/index.html
+++ b/CSS/Grid/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <!-- Gallery -->
-    <!-- <div class="boxes">
+    <div class="boxes">
         <div class="box box-1">1</div>
         <div class="box box-2">2</div>
         <div class="box box-3">3</div>
@@ -20,7 +20,7 @@
         <div class="box box-7">7</div>
         <div class="box box-8">8</div>
         <div class="box box-9">9</div>
-    </div> -->
+    </div>
 
 
 
